--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,5 +12,7 @@ jobs:
       uses: olafurpg/setup-scala@v10
       with:
         java-version: "adopt@1.8"
+    - name: Check formatting
+      run: sbt -v -Dfile.encoding=UTF-8 +scalafmtCheckAll
     - name: Build and Test
       run: sbt -v -Dfile.encoding=UTF-8 +test
